Fix user signup avatar on mobile

--- a/app/assets/stylesheets/demands.sass
+++ b/app/assets/stylesheets/demands.sass
@@ -531,13 +531,13 @@ ol.navigation
 .avatar-block
   margin-top: 1em
   img
-    width: 70%
-    display: blo8k
+    width: 70% 
+    display: block
     margin: 0 auto
 
   a
     font-size: .75em
-    display: inline-block
+    display: block
     padding: .6em 0
     text-decoration: underline
     &:hover
